PreSigil- 2.6.x
   Bug Fixes
     - make validation of css via W3C network validator work more consistently

   New Features
     - Update to Qt 6.9.2 with some additional patches
     - Update to PCRE2 version 10.46
     - Update WebProfileMgr to use the new QWebEngneProfileBuilder to properly set up disk caches
     - Modify HeadingChange and CaseChange ToolButtons to remember last used action
     


Sigil-2.6.2
   Bug Fixes
     - work around bad Qt WebEngine bug when created dynamically and used inside a QDialog for Checkpoints
     - fix minor bug in MediaTypes due to typo with append
     - fix bug in Checkpoints Diff routine when viewing images that used to exist but no longer do
     - fix bug in sanitycheck.py when spurious close tag is found before html tag
     - fix bug in Aria Clips where the book language was not properly set (Thank you BeckyEbook)
     - fix bug in Aria Clips where a # fragment was missing (Thank you BeckEbook)
     - document that Qt 6.8.X now requires Mac OS 12 as the new minimum
     - rename the environment variable: "SIGIL_FUNCTION_REPLACE_LOG_FILE" to now be:
         "SIGIL_FUNCTION_REPLACE_LOGFILE" to better match with other Sigil environment variables
         (Thank you BeckyEbook)
     - rename the environment variable "SKIP_SIGIL_UPDATE_CHECK" to now be:
         "SIGIL_SKIP_UPDATE_CHECK" to keep all Sigil specific environment variables better in sync.
     - fix bug in handling of epub filenames from input plugins

   New Features
     - enable use of the fetch api in Sigil internal "sigil:" scheme
     - create PreviewFileDialog to append thumbnail previews for images and selected text files
         when used in non-native dialog mode.  Leave native dialog mode untouched.
     - added environment variable to turn off use of custom filedialogs to make
         "Add Existing ..." work better over networked storage with lots of files:
              SIGIL_NO_CUSTOM_DIRECTORY_ICONS=1